--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
         <plugin>
           <groupId>com.heroku.sdk</groupId>
           <artifactId>heroku-maven-plugin</artifactId>
-          <version>3.0.3</version>
+          <!-- <version>3.0.3</version> -->
         </plugin>
       </plugins>
     </pluginManagement>
